--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,15 +7,15 @@ grpc:
     port: ${SERVER_PORT:50051}
     keep-alive-time: 1h
     max-inbound-message-size: 1024
-
-datasources:
-  default:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=key-manager-grpc
-    driverClassName: org.postgresql.Driver
-    username: postgres
-    password: postgres
-    schema-generate: CREATE_DROP
-    dialect: POSTGRES
+#
+#datasources:
+#  default:
+#    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=key-manager-grpc
+#    driverClassName: org.postgresql.Driver
+#    username: postgres
+#    password: postgres
+#    schema-generate: CREATE_DROP
+#    dialect: POSTGRES
 
 jpa.default.properties.hibernate.hbm2ddl.auto: create-drop
 jpa.default.properties.hibernate.show_sql: true
